sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: not found: value getvaleur
    v = getvaleur(i)
        ^